Fix video and photo caption Firefox display issue

--- a/public/style.css
+++ b/public/style.css
@@ -83,12 +83,13 @@ iframe {
   position: absolute;
   left: 0;
   right: 0;
-  justify-content: center
+  justify-content: center;
+  background: transparent
 }
 
 #caption {
   font-size: 150%;
-  background: black;
+  background: transparent;
   width: 25%;
   text-align: center;
 }
